eslint (#27)
* fix src folder

* fix test folder

* add prettier

* fix tests
